.provarCaches/00D410000011HE0EAM/objects/SDOC__SDTemplate__c.object
<CustomObject>
    <description>S-Doc: Document template definitions that are available in the S-Doc Library</description>
    <fields>
        <fullName>SDOC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Once checked, this template is visible for new document creation. Do NOT delete or modify template once activated, as they are needed to display previously created documents correctly. Instead, make changes in clone and then mark this one inactive.</description>
        <inlineHelpText>Once checked, this template is visible for new document creation. Do NOT delete or modify template once activated, as they are needed to display previously created documents correctly. Instead, make changes in clone and then mark this one inactive.</inlineHelpText>
        <label>Available For Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Allow_Create_New_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Create New Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Allow_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Base_Object__c</fullName>
        <description>Primary object this template will be used with. Fields available are based on this object.</description>
        <inlineHelpText>Primary object this template will be used with. Fields available are based on this object.</inlineHelpText>
        <label>Related To Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>rstkf__APCheck__c</fullName>
                </value>
                <value>
                    <fullName>rstkf__ap1099__c</fullName>
                </value>
                <value>
                    <fullName>rstkf__paysession__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Base_Related_Object__c</fullName>
        <description>Use this field to automatically associate this document with a secondary parent object.</description>
        <inlineHelpText>Attempts to associate document generated using this template with a second object (parent). For example, you can relate documents created from an Opportunity (the base object) to also appear in the related list for an Account (additional Relationship).</inlineHelpText>
        <label>Additional Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Box_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Box Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Component_IDs__c</fullName>
        <label>Component IDs</label>
        <length>14250</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__ContactRole__c</fullName>
        <description>If you are using a custom junction object to the Contact object, this value specifies the relationship name to that object.</description>
        <inlineHelpText>If you are using a custom junction object to the Contact object, this value specifies the relationship name to that object.</inlineHelpText>
        <label>Contact Role Related Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Core_Version__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Core Version</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Create_Attachment_Name__c</fullName>
        <description>Name of generated attachment</description>
        <inlineHelpText>Name of generated attachment</inlineHelpText>
        <label>Auto Create Attachment Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Create_Attachment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>By checking, an attachment will be created for each document that uses this template. Enabling this feature will consume more file storage space.</description>
        <inlineHelpText>By checking, an attachment will be created for each document that uses this template. Enabling this feature will consume more file storage space.</inlineHelpText>
        <label>Auto Create Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Create_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this box will make this template visible on initial load of document creation page based on the Object Type. Typically, you want to set this checkbox for the 10 most used templates for each object type.</description>
        <inlineHelpText>Checking this box will make this template visible on initial load of document creation page based on the Object Type. Typically, you want to set this checkbox for the 10 most used templates for each object type.</inlineHelpText>
        <label>Initially Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Description__c</fullName>
        <description>Description of this document template. Optionally include any keywords, as this field along with the Name field are both searched during the document selection step.</description>
        <inlineHelpText>Description of this document template. Optionally include any keywords, as this field along with the Name field are both searched during the document selection step.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Category__c</fullName>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Statement</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Dont_Save_Mass_Merge_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Save Mass Merge Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Dont_Wrap_Word_Doc_In_Table__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Don&apos;t Wrap Word Doc In Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__E_Sign_Days_Until_Expiration__c</fullName>
        <label>E-Sign Days Until Expiration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__E_Sign_Vendor__c</fullName>
        <label>E-Sign Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSIGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Email_From_OrgWideAddressId__c</fullName>
        <label>Email From Orgwide Address ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_From_OrgWideAddress_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All emails will only be sent from an org wide email address (emails cannot be sent from logged in users email address)</description>
        <inlineHelpText>All emails will only be sent from an org wide email address (emails cannot be sent from logged in users email address)</inlineHelpText>
        <label>Email From: Show only Org-Wide Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_From_Use_Signature_If_User_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email From Use Signature If User Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_From_User_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows a picklist that allows a user to select the email &quot;from&quot; address from the org-wide addresses.</description>
        <inlineHelpText>Shows a picklist that allows a user to select the email &quot;from&quot; address from the org-wide addresses.</inlineHelpText>
        <label>Email From: User can pick from address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_Body__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Lock Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_SendTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents a user from changing the outbound emails send to address field.</description>
        <inlineHelpText>Prevents a user from changing the outbound emails send to address field.</inlineHelpText>
        <label>Lock SendTo Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this will prevent users from setting the outbound subject line of the email.</description>
        <inlineHelpText>If checked, this will prevent users from setting the outbound subject line of the email.</inlineHelpText>
        <label>Lock Subject Line Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_bcc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Lock bcc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Lock_cc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Lock cc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Require_Subject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the &quot;Send&quot; button on the email page will be disabled until the user fills in the subject line.</description>
        <label>Require Subject Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Restricted_Domains__c</fullName>
        <inlineHelpText>If this field is not blank, users will be allowed to email this template only to the specified domains. 
Please specify domains as a comma-delimited list without @ symbols, for example: 
sdocs.com,test.org,trailhead.edu</inlineHelpText>
        <label>Restrict Email To The Following Domains</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_ReturnToRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upon document generation, the user will be auto-forwarded back to the record detail page.</description>
        <inlineHelpText>Upon document generation, the user will be auto-forwarded back to the record detail page.</inlineHelpText>
        <label>Redirect Back To Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_SendTo__c</fullName>
        <description>Default Send To address</description>
        <inlineHelpText>Default Send To address</inlineHelpText>
        <label>Email SendTo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Subject__c</fullName>
        <description>For HTML templates that are used to produce the email content, this value will be placed in the outbound email subject line.</description>
        <inlineHelpText>For HTML templates that are used to produce the email content, this value will be placed in the outbound email subject line.</inlineHelpText>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_bcc__c</fullName>
        <label>Email_bcc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_cc__c</fullName>
        <label>Email_cc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Enable_Detail_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking, a child record will be created for each field value on every document created using this template. This will allow for reporting, but will require significantly more data storage.</description>
        <inlineHelpText>By checking, a child record will be created for each field value on every document created using this template. This will allow for reporting, but will require significantly more data storage.</inlineHelpText>
        <label>Enable Detail Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Finished_Preprocessing_Docx_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished Preprocessing .docx Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Footer2__c</fullName>
        <label>Footer2</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__FooterSame__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this box is checked, the only the first page footer information will be used, and will apply to all pages of the document.</description>
        <inlineHelpText>If this box is checked, the only the first page footer information will be used, and will apply to all pages of the document.</inlineHelpText>
        <label>Use First Page Footer for All Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Footer__c</fullName>
        <label>Footer</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Format_Icon__c</fullName>
        <formula>IMAGE(&quot;/sfc/images/docicons/doctype_&quot; + 
CASE(SDOC__Template_Format__c, 
&quot;XLS&quot;, &quot;excel&quot;,
&quot;XLSX&quot;, &quot;excel&quot;, 
&quot;DOC&quot;, &quot;word&quot;, 
&quot;DOCX&quot;, &quot;word&quot;, 
&quot;PDF&quot;, &quot;pdf&quot;, 
&quot;HTML&quot;, &quot;html&quot;, 
&quot;PPT&quot;, &quot;ppt&quot;,
&quot;PPTX&quot;, &quot;ppt&quot;,
&quot;XML&quot;, &quot;xml&quot;, 
&quot;CSV&quot;, &quot;csv&quot;, 
&quot;&quot;) + &quot;_16.png&quot;, &quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Format_Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__GD_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Google Docs Upload. Check here if you want to allow users to upload this doc to Google docs. Your org must be properly configured for S-Docs to work with Google Docs (see documentation for setup steps)</description>
        <inlineHelpText>Enable Google Docs Upload. Check here if you want to allow users to upload this doc to Google docs. Your org must be properly configured for S-Docs to work with Google Docs (see documentation for setup steps)</inlineHelpText>
        <label>Google Docs Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__GD_Use_Native_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Docs: Use Native Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Header2__c</fullName>
        <label>Header2</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__HeaderSame__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this box is checked, the only the first page header information will be used, and will apply to all pages of the document.</description>
        <inlineHelpText>If this box is checked, the only the first page header information will be used, and will apply to all pages of the document.</inlineHelpText>
        <label>Use First Page Header for All Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Header__c</fullName>
        <label>Header</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__InclArticles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically Attach case articles to outbound email</description>
        <inlineHelpText>Automatically Attach case articles to outbound email</inlineHelpText>
        <label>Auto-attach Case Articles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__MSX_Rich_Text_Image_Dimensions__c</fullName>
        <defaultValue>&apos;width:100px; height:100px;&apos;</defaultValue>
        <description>This field specifies the dimensions for all rich text images inserted into your template that have both height and width of less than 500px each. Can be specified as inches (in), centimeters (cm), or pixels (px).</description>
        <inlineHelpText>This field specifies the dimensions for all rich text images inserted into your template that have both height and width of less than 500px each. Can be specified as inches (in), centimeters (cm), or pixels (px).</inlineHelpText>
        <label>MSX Rich Text Image Dimensions</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Embed_Images__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, referenced images will be deep embedded (saved with) the document. Otherwise, images are linked to. Embedded images requires a user to click &apos;Yes&apos; when initially opening the document.</description>
        <inlineHelpText>If checked, referenced images will be deep embedded (saved with) the document. Otherwise, images are linked to. Embedded images requires a user to click &apos;Yes&apos; when initially opening the document.</inlineHelpText>
        <label>MS Embed Images</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPFooter_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the First Page Footer</description>
        <inlineHelpText>Definition used for the background image of the First Page Footer</inlineHelpText>
        <label>MS First Page Footer BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPFooter_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of the First Page Footer</description>
        <inlineHelpText>This image will be used for the background of the First Page Footer</inlineHelpText>
        <label>MS First Page Footer Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPFooter_Content__c</fullName>
        <description>Content to appear on the First Page Footer</description>
        <inlineHelpText>Content to appear on the First Page Footer</inlineHelpText>
        <label>MS First Page Footer Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPHeader_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the First Page Header</description>
        <inlineHelpText>Definition used for the background image of the First Page Header</inlineHelpText>
        <label>MS First Page Header BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPHeader_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of the First Page Header</description>
        <inlineHelpText>This image will be used for the background of the First Page Header</inlineHelpText>
        <label>MS First Page Header Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_FPHeader_Content__c</fullName>
        <description>Content to appear on the First Page Header</description>
        <inlineHelpText>Content to appear on the First Page Header</inlineHelpText>
        <label>MS First Page Header Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Header_And_Footer_Definitions__c</fullName>
        <label>MS Header Footer Definitions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Line_Items_In_Header_Or_Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MS Line Items In Header Or Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Definition__c</fullName>
        <label>MS Page Definitions</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Footer_Margin__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Footer Margin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Header_Margin__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Header Margin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Height__c</fullName>
        <defaultValue>&quot;11.0&quot;</defaultValue>
        <label>MS Page Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Margin_Left__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Margin Left</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Margin_Right__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>MS Page Margin Right</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Page_Width__c</fullName>
        <defaultValue>&quot;8.5&quot;</defaultValue>
        <label>MS Page Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPFooter_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the Remaining Page Footers</description>
        <inlineHelpText>Definition used for the background image of the Remaining Page Footers</inlineHelpText>
        <label>MS Second Page Footer BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPFooter_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of all pages (except first) Footers</description>
        <inlineHelpText>This image will be used for the background of all pages (except first) Footers</inlineHelpText>
        <label>MS Second Page Footer Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPFooter_Content__c</fullName>
        <description>Content to appear on all pages (except first) Footers</description>
        <inlineHelpText>Content to appear on all pages (except first) Footers</inlineHelpText>
        <label>MS Second Page Footer Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPHeader_BackGrndImgStyle__c</fullName>
        <defaultValue>&quot;width:800px;height:158px;position:absolute;top:0;left:0;border:0;&quot;</defaultValue>
        <description>Definition used for the background image of the Remaining Page Headers</description>
        <inlineHelpText>Definition used for the background image of the Remaining Page Headers</inlineHelpText>
        <label>MS Second Page Header BackImage Style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPHeader_BackGrndImgUrl__c</fullName>
        <description>This image will be used for the background of all pages (except first) Headers</description>
        <inlineHelpText>This image will be used for the background of all pages (except first) Headers</inlineHelpText>
        <label>MS Second Page Header Backgrnd Img Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_SPHeader_Content__c</fullName>
        <description>Content to appear on all pages (except first) Headers</description>
        <inlineHelpText>Content to appear on all pages (except first) Headers</inlineHelpText>
        <label>MS Second Page Header Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__MS_Unit_of_Measure__c</fullName>
        <description>Margins and Spacing Values are in this unit of measure.</description>
        <inlineHelpText>Margins and Spacing Values are in this unit of measure.</inlineHelpText>
        <label>MS Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inches</fullName>
                    <default>true</default>
                    <label>Inches</label>
                </value>
                <value>
                    <fullName>Centimeters</fullName>
                </value>
                <value>
                    <fullName>Pixels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__MS_Use_Advanced_Properties__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable MS header, footer and paproperty definitions</description>
        <inlineHelpText>Checking this box will enable Advanced MS Properties like Footer/Header Definitions and page properties. You should leave this unchecked for your existing S-Docs templates where you have defined this in the template body.</inlineHelpText>
        <label>MS Use Advanced Properties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Allow_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Allow Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Clear_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Clear Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Exclude_Page_Breaks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Exclude Page Breaks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Page_Break_Every_N_Docs__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Mass Merge Page Break Every N Docs</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Sort_Field__c</fullName>
        <label>Mass Merge Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Mass_Merge_Summary_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Merge Summary Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Master_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Template</label>
        <referenceTo>SDOC__SDTemplate__c</referenceTo>
        <relationshipLabel>Version History</relationshipLabel>
        <relationshipName>S_Docs_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Num_Splitters__c</fullName>
        <label>Num_Splitters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__PDF_Unicode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Unicode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Preview_ID__c</fullName>
        <label>Preview ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Related_Lists__c</fullName>
        <label>Related Lists</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Remind_After_Generate__c</fullName>
        <label>Remind After Generate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Remind_Before_Expire__c</fullName>
        <label>Remind Before Expire</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__Remove_Attachment_On_Delete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Remove Attachment On Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Restore_Link__c</fullName>
        <description>Allows you to replace the current version of the template with this version.</description>
        <formula>IF ( NOT(isblank(SDOC__Master_Template__c)) ,
HYPERLINK(&quot;/apex/SDOC__SDRestoreTemplate?restoreId=&quot; + Id + 
&quot;&amp;currentId=&quot; + SDOC__Master_Template__c + 
&quot;&amp;currentName=&quot; + SDOC__Master_Template__r.Name,
IMAGE(&quot;/img/func_icons/util/ileUndo16.gif&quot;,&quot;Restore&quot;),
&apos;_self&apos;),
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows you to replace the current version of the template with this version.</inlineHelpText>
        <label>Restore Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__S3_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Amazon S3 Docs Upload. Check here if you want to allow users to upload this doc to Amazon S3.</inlineHelpText>
        <label>Amazon S3 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__SD_K__c</fullName>
        <label>SD_K</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SDOC__SSign_Hide_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S-Sign Hide Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Save_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Show_Warning_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Warning Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Tags_2__c</fullName>
        <label>Tags 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Tags__c</fullName>
        <label>Tags</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>